# opengl_tutorials

./: CMakeLists.txt  README.md
include/: camera.h  shader1.h  vertex_shader.h
include/models/include/: mesh.h  model.h
include/models/src/: mesh.cpp  model.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shader_files/: coordinate_fragment.fs  fragment_shader.fs  texture1_fragment_shader.fs  texture1_vertex_shader.vs  transform_vertex.vs  vertex_shader.vs
src/: hello_rectangle.cpp  hello_window.cpp  hello_world.cpp  shader1.cpp  shader1_main.cpp  shaders_rectangle.cpp  test.cpp  texture_rectangle.cpp  transform_rectangle.cpp
src/model/: CMakeLists.txt
src/model/src/: model_loading.cpp
src/opengl_basic/: camera_view.cpp  coordinate_system_eg.cpp
